[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/ui/MenuShop.gd" type="Script" id=1]
[ext_resource path="res://assets/images/menu.png" type="Texture" id=2]

[node name="MenuShop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" type="Control" parent="."]
margin_left = 40.0
margin_top = 122.0
margin_right = 372.0
margin_bottom = 283.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item" type="VBoxContainer" parent="Dialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Dialog/Item"]
margin_right = 300.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
align = 2
valign = 1

[node name="Description" type="Label" parent="Dialog/Item"]
margin_top = 37.0
margin_right = 300.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 32 )
align = 2
valign = 1

[node name="Price" type="Label" parent="Dialog/Item"]
margin_top = 74.0
margin_right = 300.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 32 )
align = 2
valign = 1

[node name="Dialog" type="VBoxContainer" parent="Dialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line" type="Label" parent="Dialog/Dialog"]
margin_right = 332.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -620.0
margin_top = 60.0
margin_right = -60.0
margin_bottom = -60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 560.0
margin_bottom = 480.0
color = Color( 0.266667, 0.392157, 0.411765, 0.831373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="MarginContainer" parent="MarginContainer"]
margin_right = 560.0
margin_bottom = 480.0
custom_constants/margin_right = 30
custom_constants/margin_top = 10
custom_constants/margin_left = 30
custom_constants/margin_bottom = 10

[node name="Control" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 30.0
margin_top = 10.0
margin_right = 530.0
margin_bottom = 470.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/CenterContainer/Control"]
margin_right = 500.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/Control/HBoxContainer2"]
margin_right = 464.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
text = "shop_menu_title"
align = 1
valign = 1

[node name="Close" type="Button" parent="MarginContainer/CenterContainer/Control/HBoxContainer2"]
margin_left = 468.0
margin_top = 8.0
margin_right = 500.0
margin_bottom = 40.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 0
size_flags_vertical = 4
flat = true

[node name="Close" type="Sprite" parent="MarginContainer/CenterContainer/Control/HBoxContainer2/Close"]
modulate = Color( 0.882353, 0.415686, 0.415686, 1 )
position = Vector2( 16, 16 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 97.2634, 13.194, 39.816, 41.5224 )

[node name="Control" type="Control" parent="MarginContainer/CenterContainer/Control"]
margin_top = 52.0
margin_right = 500.0
margin_bottom = 392.0
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/CenterContainer/Control/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
color = Color( 0.552941, 0.552941, 0.552941, 0.337255 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CenterContainer/Control/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 490.0
margin_bottom = 330.0

[node name="Shovels" type="Control" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )

[node name="Arrow1" type="Sprite" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer/VBoxContainer/Shovels"]
modulate = Color( 1, 1, 1, 0.203922 )
position = Vector2( 160.614, 39.7966 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 10, 11, 63, 42 )

[node name="Arrow2" type="Sprite" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer/VBoxContainer/Shovels"]
modulate = Color( 1, 1, 1, 0.203922 )
position = Vector2( 323.535, 42.175 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 10, 11, 63, 42 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer/VBoxContainer/Shovels"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BASIC" type="Button" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer/VBoxContainer/Shovels/HBoxContainer"]
margin_left = 51.0
margin_top = 24.0
margin_right = 105.0
margin_bottom = 56.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 4
disabled = true
text = "shovel"

[node name="NICE" type="Button" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer/VBoxContainer/Shovels/HBoxContainer"]
margin_left = 223.0
margin_top = 24.0
margin_right = 255.0
margin_bottom = 56.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 4
disabled = true
text = "+1"

[node name="SUPER" type="Button" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer/VBoxContainer/Shovels/HBoxContainer"]
margin_left = 385.0
margin_top = 24.0
margin_right = 417.0
margin_bottom = 56.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 4
disabled = true
text = "+2"

[node name="Buckets" type="Control" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 480.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 80 )

[node name="Arrow1" type="Sprite" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer/VBoxContainer/Buckets"]
modulate = Color( 1, 1, 1, 0.203922 )
position = Vector2( 163.134, 36.0169 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 10, 11, 63, 42 )

[node name="Arrow2" type="Sprite" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer/VBoxContainer/Buckets"]
modulate = Color( 1, 1, 1, 0.203922 )
position = Vector2( 326.055, 38.3953 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 10, 11, 63, 42 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer/VBoxContainer/Buckets"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BASIC" type="Button" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer/VBoxContainer/Buckets/HBoxContainer"]
margin_left = 51.0
margin_top = 24.0
margin_right = 106.0
margin_bottom = 56.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 4
disabled = true
text = "bucket"

[node name="NICE" type="Button" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer/VBoxContainer/Buckets/HBoxContainer"]
margin_left = 223.0
margin_top = 24.0
margin_right = 255.0
margin_bottom = 56.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 4
disabled = true
text = "+1"

[node name="SUPER" type="Button" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer/VBoxContainer/Buckets/HBoxContainer"]
margin_left = 385.0
margin_top = 24.0
margin_right = 417.0
margin_bottom = 56.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 4
disabled = true
text = "+2"

[node name="Explosives" type="Control" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 480.0
margin_bottom = 248.0
rect_min_size = Vector2( 0, 80 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer/VBoxContainer/Explosives"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BASIC" type="Button" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer/VBoxContainer/Explosives/HBoxContainer"]
margin_left = 45.0
margin_top = 24.0
margin_right = 111.0
margin_bottom = 56.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 4
disabled = true
text = "Grenade"

[node name="NICE" type="Button" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer/VBoxContainer/Explosives/HBoxContainer"]
margin_left = 223.0
margin_top = 24.0
margin_right = 255.0
margin_bottom = 56.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 4
disabled = true
text = "x5"

[node name="SUPER" type="Button" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer/VBoxContainer/Explosives/HBoxContainer"]
margin_left = 383.0
margin_top = 24.0
margin_right = 418.0
margin_bottom = 56.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 4
disabled = true
text = "x10"

[node name="Selection" type="Sprite" parent="MarginContainer/CenterContainer/Control/Control"]
modulate = Color( 0.117647, 0.137255, 0.580392, 0.462745 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 150, 5, 81, 82 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/Control"]
margin_top = 396.0
margin_right = 500.0
margin_bottom = 460.0
rect_min_size = Vector2( 0, 64 )
alignment = 1

[node name="Buy" type="Button" parent="MarginContainer/CenterContainer/Control/HBoxContainer"]
margin_left = 179.0
margin_top = 16.0
margin_right = 321.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 32 )
size_flags_vertical = 4
disabled = true
text = "shop_menu_buy_btn"
flat = true

[connection signal="pressed" from="MarginContainer/CenterContainer/Control/HBoxContainer2/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/Control/HBoxContainer/Buy" to="." method="_on_Buy_pressed"]
